@@ -37,6 +37,7 @@
  * #1378 (Kriging-related covariance model weirdness)
  * #1384 (The ExprTk engine is not case-sensitive)
  * #1388 (Kolmogorov fails on a PythonDistribution)
+ * #1390 (The doc for the `computeQuantile` method does not describe the optional `tail` argument)
  * #1403 (Python import otagrum throws an error)
  * #1405 (Most of the simulation algorithms for rare event fail on a coronavirus example)
  * #1416 (MethodOfMomentsFactory has no setOptimizationBounds method)
